# easy-file

./: .gitignore  ChangeLog.md  README  README.md  Test.hs  easy-file.cabal
.github/workflows/: haskell-ci.yml  mac-win.yml  main.yml
System/: EasyFile.hs
System/EasyFile/: Directory.hs  FilePath.hs  Missing.hs  Posix.hs  Win32.hs
test/: Test.hs
