Cabal-Version:          >= 1.10
Name:                   easy-file
Version:                0.2.2
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               Cross-platform File handling
Description:            Cross-platform File handling for Unix\/Mac\/Windows
Homepage:               http://github.com/kazu-yamamoto/easy-file
Category:               System
Build-Type:             Simple

Library
  Exposed-Modules:      System.EasyFile
  Other-Modules:        System.EasyFile.FilePath
                        System.EasyFile.Directory
                        System.EasyFile.Missing
  Build-Depends:
      base >= 4 && < 5
    , directory
    , filepath
    , time

  if os(windows)
    Build-Depends:      Win32
  else
    Build-Depends:      unix

  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  if impl(ghc >= 8)
    GHC-Options:        -Wcompat

Source-Repository head
  Type:                 git
  Location:             https://github.com/kazu-yamamoto/easy-file.git
